fixed modal input

--- a/index.css
+++ b/index.css
@@ -128,9 +128,11 @@ header {
 
 .modal input{
     padding: 1.5em;
-    margin: 0.625em;
+    margin: 0.625em 0;
+    width: 100%;
     border-radius: 5px;
     word-break: break-all;
+    font-size: 1rem;
 }
 
 .modal input:focus{
